#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.69])
AC_INIT(wordrank, 0.1, kjohnson0451@gmail.com)
AM_INIT_AUTOMAKE(wordrank, 0.1)
AC_CONFIG_SRCDIR([src/wordrank.c])

# Checks for programs.
AC_PROG_CC

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_OUTPUT(Makefile src/Makefile doc/Makefile man/Makefile)
